<resources>
    <string name="app_name">Connecxion Exam</string>
    <string name="swiper">SWIPER</string>
    <string name="title">Starbucks</string>
    <string name="subtitle">Store</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_settings">Settings</string>
    <string name="title_phone">PHONE</string>
    <string name="title_chat">CHAT</string>
    <string name="title_scan">SCAN</string>
    <string name="title_explore">EXPLORE</string>
    <string name="title_wallet">WALLET</string>
    <string name="title_coupon">活動代碼</string>
    <string name="title_cooperation">合作電商</string>
    <string name="title_mall">滑眾商城</string>
    <string name="coinHistory">容幣記錄</string>
    <string name="coupon">兌換券</string>
    <string name="noContent">No Content</string>
    <string name="interactionRewards">Interaction Rewards</string>
    <string name="socialRewards">Social Rewards</string>
    <string name="revenue">Revenue</string>
    <string name="more">更多詳情</string>
    <string name="subTitle_AD">台中市政府</string>
    <string name="title_AD">2019 中台灣元宵燈會-福滿迎豬。燈會限定，網美必拍</string>
    <string name="ad">AD</string>
</resources>