<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <data>
        <variable
            name="item"
            type="com.connecxionone.exam.data.CoinHistoryListItem" />
    </data>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginVertical="8dp"
        app:cardElevation="4dp"
        app:cardCornerRadius="5dp"
        app:cardPreventCornerOverlap="false"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            >
            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="64dp"
                />
            <ImageView
                android:id="@+id/icon"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_stars"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/guideline1"
                />
            <TextView
                android:id="@id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@{item.title}"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/subtitle"
                app:layout_constraintStart_toEndOf="@id/icon"
                app:layout_constraintVertical_chainStyle="packed"
                />
            <TextView
                android:id="@+id/subtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@{item.subTitle}"
                android:textSize="14sp"
                android:textColor="@android:color/darker_gray"
                app:layout_constraintStart_toEndOf="@id/icon"
                app:layout_constraintTop_toBottomOf="@id/title"
                app:layout_constraintBottom_toTopOf="@id/guideline1"
                />
            <TextView
                android:id="@+id/total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{item.totalWithComma}"
                android:textSize="20sp"
                android:textColor="@color/black"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/rate"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintVertical_chainStyle="packed"
                />
            <TextView
                android:id="@+id/rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{item.rateWithout0}"
                android:textSize="12sp"
                android:textColor="@android:color/darker_gray"
                app:layout_constraintTop_toBottomOf="@id/total"
                app:layout_constraintBottom_toTopOf="@id/guideline1"
                app:layout_constraintEnd_toEndOf="parent"
                />
            <TextView
                android:id="@+id/remainingDays"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{item.remainingDaysWithText}"
                android:textSize="14sp"
                android:textColor="@android:color/darker_gray"
                app:layout_constraintTop_toTopOf="@id/progress"
                app:layout_constraintBottom_toBottomOf="@id/progress"
                app:layout_constraintEnd_toEndOf="parent"
                />
            <ProgressBar
                android:id="@+id/progress"
                style="?android:attr/progressBarStyleHorizontal"
                android:progressDrawable="@drawable/bg_progressbar"
                android:max="100"
                android:progress="@{item.progress}"
                android:layout_width="0dp"
                android:layout_height="10dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/guideline1"
                app:layout_constraintEnd_toStartOf="@id/remainingDays"
                />
            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_begin="96dp"
                />
            <androidx.cardview.widget.CardView
                android:id="@+id/rewardBlock"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:cardCornerRadius="5dp"
                app:cardElevation="0dp"
                app:cardBackgroundColor="@color/lightGray"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/guideline2"
                >
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    >
                    <TextView
                        android:id="@+id/interactionRewardsTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="4dp"
                        android:text="@string/interactionRewards"
                        android:textColor="@color/black"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintBottom_toTopOf="@id/socialRewardsTitle"
                        />
                    <TextView
                        android:id="@+id/interactionRewardsInteger"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{item.interactionRewardsInteger}"
                        android:textColor="@color/black"
                        app:layout_constraintTop_toTopOf="@id/interactionRewardsTitle"
                        app:layout_constraintBottom_toBottomOf="@id/interactionRewardsTitle"
                        app:layout_constraintEnd_toStartOf="@id/interactionRewardsDecimal"
                        />
                    <TextView
                        android:id="@+id/interactionRewardsDecimal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{item.interactionRewardsDecimal}"
                        android:textColor="@android:color/darker_gray"
                        app:layout_constraintTop_toTopOf="@id/interactionRewardsTitle"
                        app:layout_constraintBottom_toBottomOf="@id/interactionRewardsTitle"
                        app:layout_constraintEnd_toEndOf="parent"
                        />
                    <TextView
                        android:id="@+id/socialRewardsTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="4dp"
                        android:text="@string/socialRewards"
                        android:textColor="@color/black"
                        app:layout_constraintTop_toBottomOf="@id/interactionRewardsTitle"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintBottom_toTopOf="@id/revenueTitle"
                        />
                    <TextView
                        android:id="@+id/socialRewardsInteger"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{item.socialRewardsInteger}"
                        android:textColor="@color/black"
                        app:layout_constraintTop_toTopOf="@id/socialRewardsTitle"
                        app:layout_constraintBottom_toBottomOf="@id/socialRewardsTitle"
                        app:layout_constraintEnd_toStartOf="@id/socialRewardsDecimal"
                        />
                    <TextView
                        android:id="@+id/socialRewardsDecimal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{item.socialRewardsDecimal}"
                        android:textColor="@android:color/darker_gray"
                        app:layout_constraintTop_toTopOf="@id/socialRewardsTitle"
                        app:layout_constraintBottom_toBottomOf="@id/socialRewardsTitle"
                        app:layout_constraintEnd_toEndOf="parent"
                        />
                    <TextView
                        android:id="@+id/revenueTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="4dp"
                        android:text="@string/revenue"
                        android:textColor="@color/black"
                        app:layout_constraintTop_toBottomOf="@id/socialRewardsTitle"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        />
                    <TextView
                        android:id="@+id/revenueInteger"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{item.revenueInteger}"
                        android:textColor="@color/black"
                        app:layout_constraintTop_toTopOf="@id/revenueTitle"
                        app:layout_constraintBottom_toBottomOf="@id/revenueTitle"
                        app:layout_constraintEnd_toStartOf="@id/revenueDecimal"
                        />
                    <TextView
                        android:id="@+id/revenueDecimal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{item.revenueDecimal}"
                        android:textColor="@android:color/darker_gray"
                        app:layout_constraintTop_toTopOf="@id/revenueTitle"
                        app:layout_constraintBottom_toBottomOf="@id/revenueTitle"
                        app:layout_constraintEnd_toEndOf="parent"
                        />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingVertical="8dp"
                android:text="@string/more"
                android:textColor="@color/teal_500"
                app:layout_constraintTop_toBottomOf="@id/rewardBlock"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>
